Atualizando imposto de renda

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <!-- </div> -->
         </div>
         <div style="text-align: center;">
-            <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545988059174?text=Ola" target="_blank">
+            <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545999513059?text=Ola" target="_blank">
                 Fale com um de nossos consultores
                 <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
                      <i class="fa fa-angle-right"></i>
@@ -491,7 +491,7 @@
             </div>
         </div>
         <div style="text-align: center;">
-            <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545988059174?text=Ola" target="_blank">
+            <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545999513059?text=Ola" target="_blank">
                 Fale com um de nossos consultores
                 <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
                      <i class="fa fa-angle-right"></i>
@@ -511,7 +511,7 @@
                     <h2 class="h3 g-color-black text-uppercase mb-2" style="font-weight: bold;">Declaração de imposto de renda pessoa física</h2>
                     <h2 class="h3 g-color-black text-uppercase mb-2"></h2>
                     <div class="d-inline-block g-width-35 g-height-2 g-bg-primary mb-2"></div>
-                    <p class="lead mb-0">Veja quem é <b>obrigado</b> a declarar o imposto de renda em 2024</p>
+                    <p class="lead mb-0">Veja quem é <b>obrigado</b> a declarar o imposto de renda em 2025</p>
                 </div>
             </div>
         </div>
@@ -528,19 +528,19 @@
                                 <b>Em resumo:</b>
                             </li>
                             <li class="g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve rendimentos tributáveis acima de <b>R$30.639,90</b>;
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve rendimentos tributáveis acima de <b>R$33.888,00</b>;
                             </li>
                             <li class="g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Recebeu em 2023 rendimentos isentos, não tributáveis ou tributados exclusivamente na fonte, cuja soma tenha sido <b>superior a R$ 200 mil</b>;
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Recebeu em 2024 rendimentos isentos, não tributáveis ou tributados exclusivamente na fonte, cuja soma tenha sido <b>superior a R$ 200 mil</b>;
                             </li>
                             <li class="g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve, em qualquer mês de 2023, <b>ganho de capital</b> na alienação de bens ou direitos, sujeito à incidência do imposto, ou realizou <b>operações em bolsas de valores</b>, de mercadorias, de futuros e assemelhadas cuja soma <b>foi superior a R$ 40 mil</b>, ou com apuração de ganhos líquidos sujeitas à incidência do imposto;
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve, em qualquer mês de 2024, <b>ganho de capital</b> na alienação de bens ou direitos, sujeito à incidência do imposto, ou realizou <b>operações em bolsas de valores</b>, de mercadorias, de futuros e assemelhadas, ou com apuração de ganhos líquidos sujeitas à incidência do imposto, verificar valores mínimos e condições;
                             </li>     
                             <li class="g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Teve a posse ou a propriedade, até 31 de dezembro de 2023, de bens ou direitos, inclusive terra nua, <b>acima de R$800 mil</b>;
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Teve a posse ou a propriedade, até 31 de dezembro de 2024, de bens ou direitos, inclusive terra nua, verificar valores mínimos e condições;
                             </li>
                             <li class="g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Quem teve, em 2023, receita bruta em valor <b>superior a R$ 153.199,50</b> referente a <b>atividade rural</b>;
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Quem teve, em 2024, receita bruta em valor <b>superior a R$ 169.440,00</b> referente a <b>atividade rural</b>;
                             </li>     
 
                         </ul>
@@ -549,7 +549,7 @@
             </div>
         </div>
         <div style="text-align: center;">
-        <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545988059174?text=Imposto%20de%20renda" target="_blank">
+        <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545999513059?text=Imposto%20de%20renda" target="_blank">
             Entre em contato via Whatsapp
             <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
                  <i class="fa fa-angle-right"></i>
@@ -649,7 +649,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Smart%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545999513059?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Smart%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -733,7 +733,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Pró%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545999513059?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Pró%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -817,7 +817,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Master%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545999513059?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Master%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -908,7 +908,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Smart%20para%20Comércio!" target="_blank">Contratar</a>
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545999513059?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Smart%20para%20Comércio!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -986,7 +986,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Pró%20para%20Comércio!" target="_blank">Contratar</a>
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545999513059?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Pró%20para%20Comércio!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -1130,7 +1130,7 @@
     <!-- End Back to Top -->
 
     <!-- Whatsapp -->
-    <a href="https://wa.me/5545988059174?text=Ola" style="position:fixed;width:60px;height:60px;bottom:40px;left:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
+    <a href="https://wa.me/5545999513059?text=Ola" style="position:fixed;width:60px;height:60px;bottom:40px;left:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
         z-index:1000;" target="_blank">
         <i style="margin-top:16px" class="fa fa-whatsapp"></i>
     </a>
